Libraries updated, various fixes and improvements